--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>💚 Shuvo's personal Site</title>
   </head>
-  <body>
+  <body style="background-color: skyblue;">
     <table cellspacing="20">
       <tr>
        <td><img src="shuvos.jpg" alt="profile" sizes=Width="200" 
