--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Contact</title>
 </head>
-<body>
+<body style="background-color: antiquewhite;">
     <h3>My Conatct Details</h3>
     <hr size="3"noshade>
     <p>015731608013</p>
